[package]
name = "trs80m1-rs"
version = "0.2.0"
authors = ["Marek Benc <dusxmt@gmx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
home = "0.5.4"
sdl2 = "0.35"

[dependencies.pancurses]
version = "0.17"
features = ["win32"]
