[package]
name = "trs80m1-rs"
version = "0.2.0"
authors = ["Marek Benc <dusxmt@gmx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3"
getopts = "0.2"
home = "0.5.4"
lazy_static = "1.4"
log = "0.4"
sdl2 = "0.35"
unicode-width = "0.1.7"
trs80m1-rs-core = { path = "../trs80m1-rs-core" }

[dependencies.pancurses]
version = "0.17"
features = ["win32", "wide"]
